<resources>
    <string name="app_name">Food App</string>
    <string name="intro_activity_title">Foodator</string>
    <string name="intro_description">Food Delivery App</string>
    <string name="intro_button">Get Started</string>
    <string name="greeting_msg">Hi Richard</string>
    <string name="title_msg"><![CDATA[Order & Eat]]></string>
    <string name="seach_placeholder_text">Find your food</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="banner_subtext">May 2 - June 10</string>
    <string name="order_now">Order Now</string>
    <string name="categories_title">Categories</string>
    <string name="popular_heading">Popular</string>
    <string name="home_btn_text">Home</string>
    <string name="profile_btn_text">Profile</string>
    <string name="support_btn_text">Support</string>
    <string name="settings_btn_text">Settings</string>
    <string name="add_button">+Add</string>
    <string name="cart_items_total_label">Sub Total:</string>
    <string name="cart_total_cost">£0</string>
    <string name="delivery_cost_txt">Delivery Charge:</string>
    <string name="cart_tax_txt">Tax:</string>
    <string name="cart_total_label">Total:</string>
</resources>